kubernetes/apps/monitoring/pulse-infra/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pulse-internal
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/target: kubernetes.krapulax.home
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - pulse.krapulax.home
  rules:
    - backendRefs:
        - name: pulse
          namespace: monitoring
          port: 7655
